@@ -5,6 +5,8 @@ Revision history for Perl extension Net::SSLeay.
      packed binary IP address for type 7 - GEN_IPADD.
      Improvements to SSL_OCSP_response_verify to compile under non c99
      compilers. Requested by MERIJNB.
+     Port to Android, contributed by Brian Fraser. Includes Android specific
+     version of RSA_generate_key.
 
 1.64 2014-06-11
      Fixes for test ocsp.t. Test now does not fail if HTTP::Tiny is not
